style: fixed spacing issue

--- a/styles.css
+++ b/styles.css
@@ -47,16 +47,19 @@ h1{
     position: sticky;
     top: 0;
     margin-bottom: 3rem;
+    height: 4rem;
+}
+.head-deck{
+    padding:1rem 0rem;
 }
 .deck-header{
-    list-style: none;
-    font-size: 20pt;
-    display: inline-flex;
+    font-size: 17pt;
+    display: inline-block;
 }
 .link-deck{
     text-decoration: none;
     color: var(--white);
-    padding: 0rem 2rem 0rem 0rem;
+    padding: 0rem 0.5rem;
 }
 a.link-deck:hover{
     color: var(--primary-color);
@@ -119,6 +122,7 @@ h4{
 }
 .seg-four {
     margin-bottom: 5rem;
+    width: 100vw;
 }
 .block1{
 background-color: rgba(224, 222, 222, 0.959);
@@ -128,7 +132,7 @@ padding: 0.5rem 1rem 2rem;
 padding: 0.5rem 1rem 2rem;
 }
 .projList{
-    margin-left: 4rem;
+    margin-left: 2rem;
 }
 .desc{
     text-align: left;
@@ -148,7 +152,7 @@ a.proj:hover{
 .seg-five {
     justify-content: center;
     margin:auto;
-    width:80%;
+    width: 100vw;
     height:80%;
 }
 .blog-sec{
@@ -204,6 +208,7 @@ a.blog-link:hover{
     width: 100vw;
     height: 10rem;
     padding-top: 3rem; 
+    width: 100vw;
 }
 .sub-one{
     color: white;
